# ISP_Demo

./: .gitignore  CMakeLists.txt  README.md  dependencies.sh  install.sh  main.cpp  measurements.cpp
doc/: Format.tex  Styles.tex  abstract.tex  appendix.tex  bibliography.bib  conclusion.tex  customs.tex  documentation.sh  format.tex  future.tex  implementation.tex  introduction.tex  main.tex  measurements.tex  packages.tex  refferences.bib  remaining.tex  stateOfTheArt.tex  styles.tex  theoreticalBackground.tex  title.tex
filters/: CMakeLists.txt  genericFilter.cpp  genericFilter.hpp
filters/bilateralFilter/: CMakeLists.txt  bilateralFilter.cpp  bilateralFilter.hpp
filters/boxFilter/: CMakeLists.txt  boxFilter.cpp  boxFilter.hpp
filters/cannyFilter/: CMakeLists.txt  cannyFilter.cpp  cannyFilter.hpp
filters/dilateFilter/: CMakeLists.txt  dilateFilter.cpp  dilateFilter.hpp
filters/embossFilter/: CMakeLists.txt  embossFilter.cpp  embossFilter.hpp
filters/emptyFilter/: emptyFilter.cpp  emptyFilter.hpp
filters/erodeFilter/: CMakeLists.txt  erodeFilter.cpp  erodeFilter.hpp
filters/gaussianFilter/: CMakeLists.txt  gaussianFilter.cpp  gaussianFilter.hpp
filters/lensFilter/: CMakeLists.txt  lensFilter.cpp  lensFilter.hpp
filters/medianFilter/: CMakeLists.txt  medianFilter.cpp  medianFilter.hpp
filters/sobelFilter/: CMakeLists.txt  sobelFilter.cpp  sobelFilter.hpp
filters/testFilter/: CMakeLists.txt  testFilter.cpp  testFilter.hpp
interface/: CMakeLists.txt  style.hpp
interface/button/: button.cpp  button.hpp
interface/handlebar/: handlebar.cpp  handlebar.hpp
interface/layer/: CMakeLists.txt  layer.cpp  layer.hpp
interface/resizable/: CMakeLists.txt  resizable.cpp  resizable.hpp
interface/roi/: CMakeLists.txt  roi.cpp  roi.hpp
interface/sidebar/: sidebar.cpp  sidebar.hpp
interface/slider/: slider.cpp  slider.hpp
interface/window/: CMakeLists.txt  window.cpp  window.hpp
resources/: measurements.csv  measurements_800x800_raspi2.csv
src/filters/: genericFilter.hpp
src/filters/bilateralFilter/: CMakeLists.txt  bilateralFilter.cpp  bilateralFilter.hpp
src/filters/boxFilter/: boxFilter.cpp
src/filters/cannyFilter/: CMakeLists.txt
src/filters/dilateFilter/: dilateFilter.hpp
src/filters/embossFilter/: CMakeLists.txt
src/filters/emptyFilter/: CMakeLists.txt
src/filters/erodeFilter/: erodeFilter.cpp  erodeFilter.hpp
src/filters/gaussianFilter/: CMakeLists.txt
src/filters/lensFilter/: lensFilter.hpp
src/filters/sobelFilter/: sobelFilter.cpp
src/interface/: style.hpp
src/interface/button/: CMakeLists.txt
src/interface/handlebar/: CMakeLists.txt  handlebar.hpp
src/interface/layer/: CMakeLists.txt
src/interface/roi/: roi.hpp
src/interface/sidebar/: CMakeLists.txt
src/interface/slider/: CMakeLists.txt  slider.cpp  slider.hpp
src/interface/window/: CMakeLists.txt  window.cpp
src/resources/: measurements_400x400_raspi2.csv  measurements_400x400_raspi4.csv  measurements_800x800_raspi4.csv
